Fixed home screen overflow-x problem

--- a/jucsemylib/www/css/home.css
+++ b/jucsemylib/www/css/home.css
@@ -1,10 +1,6 @@
 body
 {
-    padding: 0;
     margin: 0;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    width: 100vw;
 }
 
 #sidenav
@@ -33,6 +29,7 @@ body
 
 #topBar
 {
+    box-sizing: border-box;
     padding: 3vw;
     margin: 0;
     width: 100vw;
